fixed overflow

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,5 +1,5 @@
 section.vid-carousel {
-    background-color: #d3d3d3;
+    /* background-color: #d3d3d3; */
 }
 
 section.vid-carousel h1 {
@@ -10,7 +10,7 @@ section.vid-carousel #carousel_one {
     margin: 30px auto;
 }
 
-section.banner .content {
+section.banner .image-content {
     position: relative;
     overflow: hidden;
 }
@@ -19,9 +19,9 @@ section.banner img {
     max-width: 971px;
     width: 100%;
     /* position: absolute; */
-    top: 0;
+    /* top: 0;
     bottom: 0;
     right: 0;
-    left: 0;
+    left: 0; */
 }
 
